test_suite5/ALAN/test_suite/alan-2022-examples/failing/002170_mutation.alan
source O88ea begin get o13[5] function N() begin relax end end
